cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_21535_NetworkStack.json
{
    "Resources": {
        "NetworkStackVpcC181DEEB": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "VPCCIDR"
                },
                "EnableDnsHostnames": true,
                "EnableDnsSupport": true,
                "InstanceTenancy": "default",
                "Tags": [{
                    "Key": "Name",
                    "Value": "ByolSingleEc2Stack/NetworkStack/NetworkStack-Vpc"
                }]
            }
        },
        "NetworkStackVpcNetworkStacksubnetprivateSubnet1Subnet649E6196": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Ref": "PrivateSubnetCIDR"
                },
                "VpcId": {
                    "Ref": "NetworkStackVpcC181DEEB"
                },
                "AvailabilityZone": {
                    "Fn::Select": [0, {
                        "Fn::GetAZs": ""
                    }]
                },
                "MapPublicIpOnLaunch": false,
                "Tags": [{
                    "Key": "aws-cdk:subnet-name",
                    "Value": "NetworkStack-subnet-private"
                }, {
                    "Key": "aws-cdk:subnet-type",
                    "Value": "Private"
                }, {
                    "Key": "Name",
                    "Value": "ByolSingleEc2Stack/NetworkStack/NetworkStack-Vpc/NetworkStack-subnet-privateSubnet1"
                }]
            }
        },
        "NetworkStackVpcNetworkStacksubnetprivateSubnet1RouteTable9AB6E98D": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "NetworkStackVpcC181DEEB"
                },
                "Tags": [{
                    "Key": "Name",
                    "Value": "ByolSingleEc2Stack/NetworkStack/NetworkStack-Vpc/NetworkStack-subnet-privateSubnet1"
                }]
            }
        },
        "NetworkStackVpcNetworkStacksubnetprivateSubnet1RouteTableAssociation06CC86A5": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "NetworkStackVpcNetworkStacksubnetprivateSubnet1RouteTable9AB6E98D"
                },
                "SubnetId": {
                    "Ref": "NetworkStackVpcNetworkStacksubnetprivateSubnet1Subnet649E6196"
                }
            }
        },
        "NetworkStackVpcNetworkStacksubnetprivateSubnet1DefaultRoute2771208F": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "NetworkStackVpcNetworkStacksubnetprivateSubnet1RouteTable9AB6E98D"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "NetworkStackVpcNetworkStacksubnetpublicSubnet1NATGatewayF3F23604"
                }
            }
        },
        "NetworkStackVpcNetworkStacksubnetpublicSubnet1Subnet10AD498C": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Ref": "PublicSubnetCIDR"
                },
                "VpcId": {
                    "Ref": "NetworkStackVpcC181DEEB"
                },
                "AvailabilityZone": {
                    "Fn::Select": [0, {
                        "Fn::GetAZs": ""
                    }]
                },
                "MapPublicIpOnLaunch": true,
                "Tags": [{
                    "Key": "aws-cdk:subnet-name",
                    "Value": "NetworkStack-subnet-public"
                }, {
                    "Key": "aws-cdk:subnet-type",
                    "Value": "Public"
                }, {
                    "Key": "Name",
                    "Value": "ByolSingleEc2Stack/NetworkStack/NetworkStack-Vpc/NetworkStack-subnet-publicSubnet1"
                }]
            }
        },
        "NetworkStackVpcNetworkStacksubnetpublicSubnet1RouteTableB2014680": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "NetworkStackVpcC181DEEB"
                },
                "Tags": [{
                    "Key": "Name",
                    "Value": "ByolSingleEc2Stack/NetworkStack/NetworkStack-Vpc/NetworkStack-subnet-publicSubnet1"
                }]
            }
        },
        "NetworkStackVpcNetworkStacksubnetpublicSubnet1RouteTableAssociationC587455B": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "NetworkStackVpcNetworkStacksubnetpublicSubnet1RouteTableB2014680"
                },
                "SubnetId": {
                    "Ref": "NetworkStackVpcNetworkStacksubnetpublicSubnet1Subnet10AD498C"
                }
            }
        },
        "NetworkStackVpcNetworkStacksubnetpublicSubnet1DefaultRoute823FF44E": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "NetworkStackVpcNetworkStacksubnetpublicSubnet1RouteTableB2014680"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "NetworkStackVpcIGWFE1FE37F"
                }
            },
            "DependsOn": ["NetworkStackVpcVPCGWD8E8D0EA"]
        },
        "NetworkStackVpcNetworkStacksubnetpublicSubnet1EIP3B29AA54": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc",
                "Tags": [{
                    "Key": "Name",
                    "Value": "ByolSingleEc2Stack/NetworkStack/NetworkStack-Vpc/NetworkStack-subnet-publicSubnet1"
                }]
            }
        },
        "NetworkStackVpcNetworkStacksubnetpublicSubnet1NATGatewayF3F23604": {
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "SubnetId": {
                    "Ref": "NetworkStackVpcNetworkStacksubnetpublicSubnet1Subnet10AD498C"
                },
                "AllocationId": {
                    "Fn::GetAtt": ["NetworkStackVpcNetworkStacksubnetpublicSubnet1EIP3B29AA54", "AllocationId"]
                },
                "Tags": [{
                    "Key": "Name",
                    "Value": "ByolSingleEc2Stack/NetworkStack/NetworkStack-Vpc/NetworkStack-subnet-publicSubnet1"
                }]
            }
        },
        "NetworkStackVpcIGWFE1FE37F": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [{
                    "Key": "Name",
                    "Value": "ByolSingleEc2Stack/NetworkStack/NetworkStack-Vpc"
                }]
            }
        },
        "NetworkStackVpcVPCGWD8E8D0EA": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "NetworkStackVpcC181DEEB"
                },
                "InternetGatewayId": {
                    "Ref": "NetworkStackVpcIGWFE1FE37F"
                }
            }
        },
        "NetworkStackendpointSG6BE77EA9": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "ByolSingleEc2Stack/NetworkStack/NetworkStack-endpointSG",
                "SecurityGroupEgress": [{
                    "CidrIp": "0.0.0.0/0",
                    "Description": "Allow all outbound traffic by default",
                    "IpProtocol": "-1"
                }],
                "SecurityGroupIngress": [{
                    "CidrIp": {
                        "Ref": "PublicAccessCIDR"
                    },
                    "Description": "Allow inbound traffic in PublicAccessCIDR on port 443",
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "ToPort": 443
                }, {
                    "CidrIp": {
                        "Fn::GetAtt": ["NetworkStackVpcC181DEEB", "CidrBlock"]
                    },
                    "Description": {
                        "Fn::Join": ["", ["from ", {
                            "Fn::GetAtt": ["NetworkStackVpcC181DEEB", "CidrBlock"]
                        }, ":443"]]
                    },
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "ToPort": 443
                }],
                "VpcId": {
                    "Ref": "NetworkStackVpcC181DEEB"
                }
            }
        },
        "NetworkStackcfnEndpoint28387098": {
            "Type": "AWS::EC2::VPCEndpoint",
            "Properties": {
                "ServiceName": {
                    "Fn::Join": ["", ["com.amazonaws.", {
                        "Ref": "AWS::Region"
                    }, ".cloudformation"]]
                },
                "VpcId": {
                    "Ref": "NetworkStackVpcC181DEEB"
                },
                "PrivateDnsEnabled": true,
                "SecurityGroupIds": [{
                    "Fn::GetAtt": ["NetworkStackendpointSG6BE77EA9", "GroupId"]
                }],
                "SubnetIds": [{
                    "Ref": "NetworkStackVpcNetworkStacksubnetprivateSubnet1Subnet649E6196"
                }],
                "VpcEndpointType": "Interface"
            }
        },
        "NetworkStacknatEIP0": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc"
            }
        },
        "NetworkStackgatewayProxySG617A556E": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "ByolSingleEc2Stack/NetworkStack/NetworkStack-gatewayProxySG",
                "SecurityGroupEgress": [{
                    "CidrIp": "0.0.0.0/0",
                    "Description": "Allow all outbound traffic by default",
                    "IpProtocol": "-1"
                }],
                "SecurityGroupIngress": [{
                    "CidrIp": {
                        "Ref": "PublicAccessCIDR"
                    },
                    "Description": "Allow inbound traffic in PublicAccessCIDR on port 443",
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "ToPort": 443
                }],
                "VpcId": {
                    "Ref": "NetworkStackVpcC181DEEB"
                }
            }
        }
    },
    "Outputs": {
        "ByolSingleEc2StackNetworkStackNetworkStackVpc8D7399B3Ref": {
            "Value": {
                "Ref": "NetworkStackVpcC181DEEB"
            }
        },
        "ByolSingleEc2StackNetworkStackNetworkStackVpcNetworkStacksubnetpublicSubnet1Subnet36419961Ref": {
            "Value": {
                "Ref": "NetworkStackVpcNetworkStacksubnetpublicSubnet1Subnet10AD498C"
            }
        }
    },
    "Parameters": {
        "VPCCIDR": {
            "Type": "String"
        },
        "PublicSubnetCIDR": {
            "Type": "String"
        },
        "PrivateSubnetCIDR": {
            "Type": "String"
        },
        "PublicAccessCIDR": {
            "Type": "String"
        }
    }
}
